Add Python dependencies
- genshi
- sphinx (including sphinx dependencies)

Python modules are build dependencies, so are not installed into the
"superbuild-install" directory like the other packages.  Instead,
they are installed into a "python" directory, and the PATH,
PYTHONPATH and CMAKE_PROGRAM_PATH environment variables are set in
all downstream package builds to expose the python modules and
binaries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,21 @@ include(ExternalProject)
 include("${CMAKE_CURRENT_LIST_DIR}/ExternalProjectHelpers.cmake")
 
 # External projects.
-set(PREREQUISITES zlib bzip2 png tiff icu boost xerces)
+set(PREREQUISITES
+    zlib
+    bzip2
+    png
+    tiff
+    icu
+    boost
+    xerces
+    py-setuptools
+    py-genshi
+    py-markupsafe
+    py-jinja2
+    py-docutils
+    py-pygments
+    py-sphinx)
 add_package(${PREREQUISITES} bioformats)
 
 # Single target to build all prerequisites
