Backport superbuild changes from develop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,15 +43,35 @@ cmake_policy(VERSION 3.2.0)
 enable_language(CXX)
 enable_language(C)
 
+# Add our own modules to the include path
 list(APPEND CMAKE_MODULE_PATH
      "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
+if(NOT MSVC)
+  # Get the path for the "make" command; note it's set to the
+  # native build tool by default so this overrides it.  The
+  # native tools is also set in CMAKE_BUILD_TOOL.  Note: this
+  # duplicates CMakeUnixFindMake using a different variable.
+  find_program(OME_MAKE_PROGRAM NAMES gmake make smake)
+  mark_as_advanced(OME_MAKE_PROGRAM)
+
+  # Look for a make tool provided by Xcode
+  if(NOT OME_MAKE_PROGRAM AND CMAKE_HOST_APPLE)
+    execute_process(COMMAND xcrun --find make
+      OUTPUT_VARIABLE _xcrun_out OUTPUT_STRIP_TRAILING_WHITESPACE
+      ERROR_VARIABLE _xcrun_err)
+    if(_xcrun_out)
+      set_property(CACHE OME_MAKE_PROGRAM PROPERTY VALUE "${_xcrun_out}")
+    endif()
+  endif()
+endif()
 
 # Options to pass through to main Bio-Formats build.
 include("${CMAKE_CURRENT_LIST_DIR}/Options.cmake")
 
-project(bioformats-superbuild)
+project(ome-superbuild)
 
-message(STATUS "Configuring Bio-Formats Super-Build")
+message(STATUS "Configuring OME Super-Build")
 
 include(GNUInstallDirs)
 include(ExternalProject)
@@ -59,21 +79,19 @@ include(ExternalProject)
 # Helper functions and variables used by the following external projects.
 include("${CMAKE_CURRENT_LIST_DIR}/ExternalProjectHelpers.cmake")
 
-# External projects.
-ome_add_package(bioformats)
-
-# Single target to build all prerequisites
-add_custom_target(prerequisites
-                  DEPENDS bioformats-prerequisites)
+# External projects to build (will resolve dependencies recursively).
+foreach(package ${build-packages})
+  ome_add_package("${package}")
+endforeach()
 
 # Install cached build if needed
-if(BIOFORMATS_EP_BUILD_CACHE)
-  install(DIRECTORY ${BIOFORMATS_EP_BUILD_CACHE}/
+if(OME_EP_BUILD_CACHE)
+  install(DIRECTORY ${OME_EP_BUILD_CACHE}/
           DESTINATION ${CMAKE_INSTALL_PREFIX}
           USE_SOURCE_PERMISSIONS)
 endif()
 
 # Install superbuild
-install(DIRECTORY ${BIOFORMATS_EP_INSTALL_DIR}/
+install(DIRECTORY ${OME_EP_INSTALL_DIR}/
         DESTINATION ${CMAKE_INSTALL_PREFIX}
         USE_SOURCE_PERMISSIONS)
