--- a/docs/sphinx/CMakeLists.txt
+++ b/docs/sphinx/CMakeLists.txt
@@ -66,8 +66,8 @@ if (BUILD_SPHINX AND SPHINX_BUILD)
                      COMMAND ${CMAKE_COMMAND} -E make_directory "${sphinx_builddir}/cache"
                      COMMAND ${CMAKE_COMMAND} -E make_directory "${sphinx_builddir}/html"
                      COMMAND ${SPHINX_BUILD}
-                             -D "release=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}.${DOC_VERSION_PATCH}"
-                             -D "version=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}"
+                             -D "release=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}.${DOC_VERSION_PATCH}${DOC_VERSION_DEV}"
+                             -D "version=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}${DOC_VERSION_DEV}"
                              -c "${sphinx_builddir}"
                              -d "${sphinx_builddir}/cache"
                              -b html
@@ -91,8 +91,8 @@ if (BUILD_SPHINX AND SPHINX_BUILD)
                             "-DSPHINX_BUILDDIR=${sphinx_builddir}"
                             "-DSPHINX_CACHEDIR=${sphinx_builddir}/cache"
                             "-DSPHINX_LINKCHECKDIR=${sphinx_builddir}/linkcheck"
-                            "-DSPHINX_RELEASE=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}.${DOC_VERSION_PATCH}"
-                            "-DSPHINX_VERSION=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}"
+                            "-DSPHINX_RELEASE=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}.${DOC_VERSION_PATCH}${DOC_VERSION_DEV}"
+                            "-DSPHINX_VERSION=${DOC_VERSION_MAJOR}.${DOC_VERSION_MINOR}${DOC_VERSION_DEV}"
                             "-DSPHINX_INSTALL_PATH=${PROJECT_NAME}/manual/html"
                             -P "${CMAKE_CURRENT_LIST_DIR}/../../cmake/SphinxCheckRemoteLinks.cmake"
                      COMMENT "Checking remote links in sphinx documentation"
